# erpnext_ai_chat

./: .gitignore  FIXES_APPLIED.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  VOICE_FEATURE.md  pyproject.toml  requirements.txt  setup.py
erpnext_ai_chat/: hooks.py  modules.txt
erpnext_ai_chat/ai_agent/: __init__.py  agent.py  charts.py  memory.py  tools.py
erpnext_ai_chat/api/: chat.py
erpnext_ai_chat/config/: desktop.py
erpnext_ai_chat/erpnext_ai_chat/doctype/ai_chat_message/: ai_chat_message.json  ai_chat_message.py
erpnext_ai_chat/erpnext_ai_chat/doctype/ai_chat_session/: ai_chat_session.json  ai_chat_session.py
erpnext_ai_chat/erpnext_ai_chat/doctype/ai_chat_settings/: ai_chat_settings.js  ai_chat_settings.json  ai_chat_settings.py  test_ai_chat_settings.py
erpnext_ai_chat/public/css/: erpnext_ai_chat.css
erpnext_ai_chat/public/js/: erpnext_ai_chat.js
erpnext_ai_chat/www/: ai_chat.html  ai_chat.py
