[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "erpnext_ai_chat"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dynamic = ["version"]
description = "AI-powered chat assistant for ERPNext"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "frappe",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "chromadb>=0.4.22",
    "openai>=1.12.0",
    "tiktoken>=0.5.2",
    "pydantic>=2.0.0",
]

[project.urls]
Home = "https://github.com/yourusername/erpnext_ai_chat"

[tool.ruff]
line-length = 120
target-version = "py310"
